--- a/app/views/supervisors/courses/_form.html.erb
+++ b/app/views/supervisors/courses/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for [:supervisors, @course] do |f| %>
+  <%= render "layouts/shared/error_message", object: f.object %>
   <div class="image-upload col-md-2 col-md-offset-4">
     <div class="image-edit">
       <%= f.file_field :picture, class: "form-control",
@@ -16,16 +17,28 @@
     <%= f.text_field :name, class: "form-control" %>
     <%= display_error :name %>
   </div>
-  <div class="col-md-6">
-    <%= f.label :duration_type %>
-    <%= f.select :duration_type, Course.duration_type_i18n, {},
-      {class: "form-control"} %>
+  <div class="form-row">
+      <div class="col-md-6">
+      <%= f.label :duration_type %>
+      <%= f.select :duration_type, Course.duration_type_i18n, {},
+        {class: "form-control"} %>
+    </div>
+    <div class="col-md-6">
+      <%= f.label :duration %>
+      <%= f.text_field :duration, class: "form-control", type: "number" %>
+      <%= display_error :duration %>
+    </div>
   </div>
-  <div class="col-md-6">
-    <%= f.label :duration %>
-    <%= f.text_field :duration, class: "form-control", type: "number" %>
-    <%= display_error :duration %>
-  </div>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <%= f.label :date_start %>
+        <%= f.date_field :date_start, class: "form-control" %>
+      </div>
+      <div class="form-group col-md-6">
+        <%= f.label :date_end %>
+        <%= f.date_field :date_end, class: "form-control" %>
+      </div>
+    </div>
   <div class="col-md-12">
     <%= f.label :status %>
     <%= f.select :status, Course.status_i18n, {},
@@ -43,8 +56,7 @@
           <strong class="panel-title">
             <%= t "helpers.label.course.course_subjects" %>
           </strong>
-          <%= link_to_add_row fa_icon("plus-circle", text: ""), f,
-            :course_subjects, class: "btn btn-add-task" %>
+          <%= link_to_add_row "More", f, :course_subjects, class: "btn btn-add-task"%>
         </div>
         <div class="panel-body">
           <%= display_error :course_subjects, "" %>
