--- a/app/views/supervisors/trainees/_course_user.html.erb
+++ b/app/views/supervisors/trainees/_course_user.html.erb
@@ -13,7 +13,8 @@
   </td>
   <td class="option">
     <%= f.hidden_field :_destroy %>
-    <%= link_to fa_icon("trash", text: ""), nil,
-      class: "remove_record remove-position" %>
+    <%= link_to "", class: "remove_record remove-position" do %>
+      <i class="fa fa-trash"></i>
+    <% end %>
   </td>
 </tr>
