--- a/app/views/supervisors/users/index.html.erb
+++ b/app/views/supervisors/users/index.html.erb
@@ -36,7 +36,7 @@
             <% end %>
             <button href="#myModal" class="btn btn-danger btn-remove"
               data-id="<%= user.id %>" data-toggle="modal" >
-              <span class="fa fa-remove"></span>
+              <span class="fa fa-trash"></span>
             </button>
           </td>
         </tr>
