--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,7 @@
 
 <body>
   <div class="wrapper">
-    <%= render "layouts/nav" %>
-    <div class="container">
+    <div class="container-fluid">
       <%= render "layouts/shared/flash_messages" %>
       <%= yield %>
     </div>
