--- a/app/views/supervisors/courses/index.html.erb
+++ b/app/views/supervisors/courses/index.html.erb
@@ -5,9 +5,9 @@
     <table class="table table-striped verticalalign">
       <h3><%= t "page.course_list" %></h3>
       <div id="showmsg"></div>
-      <%= link_to fa_icon("plus", text: t("page.course_create")),
-        new_supervisors_course_path, data: { turbolinks: false } ,
-        class: "btn btn-success" %>
+      <%= link_to new_supervisors_course_path, class: "btn btn-success" do %>
+        <i class="material-icons">&#xE147;</i> <span>Create new Course</span>
+      <% end %>
       <thead>
       <tr>
         <th><%= t "table.column.order" %></th>
@@ -38,20 +38,22 @@
             </span>
           </td>
           <td>
-            <%= link_to fa_icon("edit"), edit_supervisors_course_path(course),
-              data: { turbolinks: false }, class: "btn btn-warning"%>
-            <%= link_to fa_icon("group"), edit_supervisors_trainee_path(course),
-              data: { turbolinks: false }, class: "btn btn-warning" %>
+          <%= link_to edit_supervisors_course_path(course), class: "btn btn-warning" do %>
+            <i class="fa fa-edit"></i>
+          <% end %>
+          <%= link_to edit_supervisors_trainee_path(course), class: "btn btn-warning" do %>
+            <i class="fa fa-users"></i>
+          <% end %>
             <button href="#myModal" class="btn btn-danger btn-load-modal"
               data-id="<%= course.id %>" data-toggle="modal">
-              <span class="fa fa-remove"></span>
+              <span class="fa fa-trash"></span>
             </button>
           </td>
         </tr>
       <% end %>
       </tbody>
     </table>
-    <%= will_paginate %>
+    <%= will_paginate @courses %>
   </div>
 </div>
 
