--- a/app/views/supervisors/users/_form.html.erb
+++ b/app/views/supervisors/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user do |f| %>
+<%= form_for [:supervisors, @user] do |f| %>
   <%= render "layouts/shared/error_message", object: f.object %>
   <div class="form-group row">
     <%= f.label :email, class: "col-sm-4 form-control-label" %>
@@ -6,18 +6,20 @@
       <%= f.text_field :email, class: "form-control" %>
     </div>
   </div>
-  <div class="form-group row">
-    <%= f.label :password, class: "col-sm-4 form-control-label" %>
-    <div class="col-sm-8">
-      <%= f.password_field :password, class: "form-control" %>
+  <% if action_name != "edit" %>
+    <div class="form-group row">
+      <%= f.label :password, class: "col-sm-4 form-control-label" %>
+      <div class="col-sm-8">
+        <%= f.password_field :password, class: "form-control" %>
+      </div>
     </div>
-  </div>
-  <div class="form-group row">
-    <%= f.label :password_confirmation, class: "col-sm-4 form-control-label" %>
-    <div class="col-sm-8">
-      <%= f.password_field :password_confirmation, class: "form-control" %>
+    <div class="form-group row">
+      <%= f.label :password_confirmation, class: "col-sm-4 form-control-label" %>
+      <div class="col-sm-8">
+        <%= f.password_field :password_confirmation, class: "form-control" %>
+      </div>
     </div>
-  </div>
+  <% end %>
   <div class="form-group row">
     <%= f.label :fullname, class: "col-sm-4 form-control-label" %>
     <div class="col-sm-8">
@@ -40,7 +42,7 @@
   <div class="form-group row">
     <%= f.label :gender, class: "col-sm-4 form-control-label" %>
     <div class="col-sm-8">
-      <%= f.collection_radio_buttons :gender, User.gender_types_i18n,
+      <%= f.collection_radio_buttons :gender, User.gender_types,
         :second, :first, {checked: User.gender_types[:male]} %>
     </div>
   </div>
