--- a/app/views/supervisors/subjects/index.html.erb
+++ b/app/views/supervisors/subjects/index.html.erb
@@ -5,7 +5,7 @@
           <h2><%= t "page.subject_list" %></h2>
         </div>
         <div class="col-sm-6">
-          <%= link_to new_supervisors_subject_path, class: "btn btn-success" do %>
+          <%= link_to new_supervisors_subject_path, class: "btn btn-success float-right" do %>
             <i class="material-icons">&#xE147;</i>
             <span><%= t "create" %></span>
           <% end %>
