--- a/app/views/supervisors/courses/index.html.erb
+++ b/app/views/supervisors/courses/index.html.erb
@@ -41,7 +41,7 @@
           <%= link_to edit_supervisors_course_path(course), class: "btn btn-warning" do %>
             <i class="fa fa-edit"></i>
           <% end %>
-          <%= link_to edit_supervisors_trainee_path(course), class: "btn btn-warning" do %>
+          <%= link_to supervisors_assign_path(course), class: "btn btn-warning" do %>
             <i class="fa fa-users"></i>
           <% end %>
             <button href="#myModal" class="btn btn-danger btn-load-modal"
