--- a/app/views/supervisors/trainees/_course_user.html.erb
+++ b/app/views/supervisors/trainees/_course_user.html.erb
@@ -1,4 +1,4 @@
-<tr data-id="<%= f.object.user.id %>" style="display: table-row">
+<tr id="<%= f.object.user.id %>" style="display: table-row">
   <td class="avatar-col">
     <%= f.hidden_field :user_id %>
     <%= image_tag f.object.user.avatar.url, class: "img-circle avatar-size" %>
@@ -12,8 +12,7 @@
     <i class="fa <%= display_gender f.object.user %>"></i>
   </td>
   <td class="option">
-    <%= f.hidden_field :_destroy %>
-    <%= link_to "", class: "remove_record remove-position" do %>
+    <%= link_to "javascript:void(0);", id: f.object.id, class: "remove_record remove-position" do %>
       <i class="fa fa-trash"></i>
     <% end %>
   </td>
