--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -12,7 +12,7 @@
           </div>
           <div class="col-md-12 col-sm-12 col-xs-12 user-detail-section1 text-center">
             <button id="btn-contact" class="btn btn-success btn-block follow">Contactarme</button>
-            <button class="btn btn-warning btn-block">Descargar Curriculum</button>
+            <%= link_to "Report", new_report_path, class: "btn btn-warning btn-block" %>
           </div>
           <div class="row user-detail-row">
             <div class="col-md-12 col-sm-12 user-detail-section2 pull-left">
