--- a/app/views/homes/_course.html.erb
+++ b/app/views/homes/_course.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-10">
-    <%= link_to "nil" do %>
+    <%= link_to course_user_path(course.id) do %>
       <p class="font-weight-bold"><%= course.name %></p>
       <% end %>
   </div>
